* tests/tagdemo-undef.test: New test for hosts that allow shared libraries with undefined symbols. * tests/Makefile.am (CXX_TESTS): Add it.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -22,7 +22,8 @@ DISTCLEANFILES =
 CXX_TESTS = \
 	tagdemo-static.test tagdemo-make.test tagdemo-exec.test \
 	tagdemo-conf.test tagdemo-make.test tagdemo-exec.test \
-	tagdemo-shared.test tagdemo-make.test tagdemo-exec.test
+	tagdemo-shared.test tagdemo-make.test tagdemo-exec.test \
+	tagdemo-undef.test tagdemo-make.test tagdemo-exec.test
 
 F77_TESTS = \
 	f77demo-static.test f77demo-make.test f77demo-exec.test \
