* tests/cdemo-undef.test: New test for hosts that allow shared libraries with undefined symbols, but have no C++ compiler installed. * tests/Makefile.am (COMMON_TESTS): Add it.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -63,7 +63,8 @@ COMMON_TESTS = \
 	depdemo-shared.test depdemo-make.test depdemo-exec.test \
 	depdemo-inst.test depdemo-relink.test depdemo-unst.test \
 	mdemo-shared.test mdemo-make.test mdemo-exec.test \
-	mdemo-inst.test mdemo-unst.test
+	mdemo-inst.test mdemo-unst.test \
+	cdemo-undef.test cdemo-make.test cdemo-exec.test
 
 if HAVE_CXX
 if HAVE_F77
