Add some new tests for Libtool's support of Automake subdir-objects builds.  This marks the beginning of a move to an Autotest driven test framework, which will eventually allow us to trim away many of the generated files in the current test demo subdirectories:
* configure.ac (AC_CONFIG_TESTDIR): Re-enable commented out
Autotest macros.
(AUTOTEST, M4SH): Use --language long hand.
* bootstrap: Generate tests/testsuite, and by implication
tests/package.m4.
* Makefile.am (edit): Add substitutions needed to generate
tests/package.m4 from bootstrap.
(check-recursive): Add tests/testsuite.
(TESTSUITE): The new Autotest testsuite target.
(TESTSUITE_AT): The Autotest sources.
(EXTRA_DIST): Distribute the generated testsuite and sources.
(tests/package.m4): Use $(edit) to propagate package metadata to
the new tests.
(tests/testsuite): Build the testsuite.
(tests/atconfig): How to regenerate the file.
(check-local): Hook Autotest into `make check'.
(installcheck-local): Run the testsuite on the installed tree.
(clean-local): Tidy our file droppings.
* tests/Makefile.am: Remove bitrotted code from Autotest
experiments in Autoconf 2.52 era.  Updated the rest and moved into
Makefile.am.
* tests/testsuite.at: New container for Autotest test groups.
* tests/am-subdir.at: New test group for compatibility with
Automake's subdir-objects builds.  Currently holds two tests, one
for a C project and another similar project in C++.
* TODO: Add an entry to remind us that these new tests expose a
bug in libtool.
* NEWS: Updated.

--- a/configure.ac
+++ b/configure.ac
@@ -34,8 +34,9 @@ AC_CONFIG_AUX_DIR([config])
 ## Autotest initialisation. ##
 ## ------------------------ ##
 
-dnl AC_CONFIG_TESTDIR([tests])
-dnl AC_CONFIG_FILES([tests/atlocal])
+AC_CONFIG_TESTDIR([tests])
+AC_SUBST([AUTOM4TE], [autom4te])
+AC_SUBST([AUTOTEST], ['$(AUTOM4TE) --language=autotest'])
 
 
 ## ---------------------------------------- ##
@@ -115,7 +116,7 @@ dnl much older releases of autoconf and automake.  See release notes.
 AM_INIT_AUTOMAKE([1.8 gnits dist-bzip2]) ## We use auto-m4_including
 
 dnl We use m4sh to generate libtool's portable shell scripts
-AC_SUBST([M4SH], ['autom4te -l m4sh'])
+AC_SUBST([M4SH], ['$(AUTOM4TE) --language=m4sh'])
 
 dnl Make sure config.status is regenerated when the version timestamp changes
 AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_builddir)/stamp-vcl'])
