--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -86,6 +86,8 @@ $(top_builddir)/libtool:
 	cd $(top_builddir) && $(MAKE) all
 
 # Be sure to reexport important environment variables.
+# This is a copy of ../Makefile.am (TESTS_ENVIRONMENT), be sure to
+# keep them is sync if you change them before these tests are migrated!
 TESTS_ENVIRONMENT = MAKE="$(MAKE)" CC="$(CC)" CFLAGS="$(CFLAGS)" \
 	CPPFLAGS="$(CPPFLAGS)" LD="$(LD)" LDFLAGS="$(LDFLAGS)" \
 	LIBS="$(LIBS)" LN_S="$(LN_S)" NM="$(NM)" RANLIB="$(RANLIB)" \
@@ -107,50 +109,7 @@ clean-local:
 	done
 	rm -rf _inst
 
-## ------------ ##
-## package.m4.  ##
-## ------------ ##
-
-$(srcdir)/package.m4: $(top_srcdir)/configure.ac
-	{					\
-	  echo '# Signature of the current package.'; \
-	  echo 'm4_define([AT_PACKAGE_NAME],      [@PACKAGE_NAME@])'; \
-	  echo 'm4_define([AT_PACKAGE_TARNAME],   [@PACKAGE_TARNAME@])'; \
-	  echo 'm4_define([AT_PACKAGE_VERSION],   [@PACKAGE_VERSION@])'; \
-	  echo 'm4_define([AT_PACKAGE_STRING],    [@PACKAGE_STRING@])'; \
-	  echo 'm4_define([AT_PACKAGE_BUGREPORT], [@PACKAGE_BUGREPORT@])'; \
-	} >$(srcdir)/package.m4
-
-## ------------ ##
-## Test suite.  ##
-## ------------ ##
-
 $(TESTS): defs
 defs: defs.in ../Makefile.am
 	cd .. && $(MAKE) $(AM_MAKEFLAGS) tests/defs
 DISTCLEANFILES += defs
-
-TESTSUITE_AT = \
-	testsuite.at \
-	demo.at fortran.at tools.at
-TESTSUITE = testsuite
-
-#EXTRA_DIST = $(TESTSUITE_AT) local.at atlocal.in package.m4
-
-#check-local: atconfig $(TESTSUITE)
-#	$(SHELL) $(srcdir)/$(TESTSUITE)
-
-#clean-local:
-#	$(srcdir)/testsuite --clean
-
-AUTOM4TE = autom4te
-AUTOTEST = $(AUTOM4TE) --language=autotest
-$(srcdir)/$(TESTSUITE): $(srcdir)/package.m4 local.at $(TESTSUITE_AT)
-	$(AUTOTEST) -I $(srcdir) testsuite.at -o $@
-
-atconfig: $(top_builddir)/config.status
-	cd $(top_builddir) && ./config.status tests/$@
-
-# Run the test suite on the *installed* tree.
-#installcheck-local:
-	$(SHELL) $(srcdir)/$(TESTSUITE) AUTOTEST_PATH=$(exec_prefix)/bin
