* Makefile.am, Makefile.maint, tests/Makefile.am: Use path for dependencies built in the source tree, to cater for BSD make.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -137,7 +137,7 @@ TESTSUITE = testsuite
 
 #EXTRA_DIST = $(TESTSUITE_AT) local.at atlocal.in package.m4
 
-#check-local: atconfig $(TESTSUITE)
+#check-local: atconfig $(srcdir)/$(TESTSUITE)
 #	$(SHELL) $(srcdir)/$(TESTSUITE)
 
 #clean-local:
