--- a/libltdl/loaders/Makefile.am
+++ b/libltdl/loaders/Makefile.am
@@ -24,8 +24,8 @@ EXTRA_DIST		=
 AUTOMAKE_OPTIONS	= foreign
 
 DEFS			= -DHAVE_CONFIG_H="<$(CONFIG_H)>" -DLTDL
-AM_CPPFLAGS		= -I$(top_builddir) -I$(top_srcdir) \
-			  -I.. -I$(srcdir)/..
+AM_CPPFLAGS		= -I$(top_builddir) -I$(top_srcdir)  \
+			  -I.. -I$(srcdir)/.. -I$(srcdir)/../libltdl
 AM_LDFLAGS		= -no-undefined -module -avoid-version -export-dynamic
 
 pkgincludedir		= $(includedir)/libltdl
