* libltdl/lt__strl.c, libltdl/libltdl/lt__strl.h: New files to emulate strlcat and strlcpy, which support size-bounded string copying and concatenation for improved security. * libltdl/Makefile.am (libdlloader_la_SOURCES): Build source files libltdl/lt__strl.c and libltdl/libltdl/lt__strl.h. * m4/ltdl.m4 (LTDL_INIT): Add checks for strlcat and strlcpy.

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -35,7 +35,9 @@ pkgincludedir		= $(includedir)/libltdl
 
 lib_LTLIBRARIES		= libdlloader.la
 libdlloader_la_SOURCES  = libltdl/lt_error.h lt_error.c \
-			  libltdl/lt__private.h libltdl/lt_system.h \
+			  libltdl/lt__private.h \
+                          lt__strl.c libltdl/lt__strl.h \
+                          libltdl/lt_system.h \
 			  libltdl/lt__alloc.h lt__alloc.c \
 			  libltdl/lt__glibc.h \
 			  libltdl/lt__dirent.h \
