--- a/Makefile.maint
+++ b/Makefile.maint
@@ -121,6 +121,7 @@ FETCHFILES = \
 ./INSTALL \
 config/config.guess \
 config/config.sub \
+config/install-sh \
 config/texinfo.tex
 
 ## Fetch the latest versions of files we care about.
@@ -131,6 +132,7 @@ fetch:
 ## If a get fails then that is a problem.
 	(cd Fetchdir && \
 	$(WGETSGO)/autoconf/autoconf/INSTALL; \
+	$(WGETSGO)/automake/automake/lib/install-sh; \
 	$(WGETSGO)/config/config/config.guess; \
 	$(WGETSGO)/config/config/config.sub; \
 	$(WGETSGO)/texinfo/texinfo/doc/texinfo.tex )
